setup router, started styling header for mobile screens

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,12 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Ecommerce site for RaggyGirlVintage"
+    <meta name="description" content="Ecommerce site for RaggyGirlVintage" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
     />
+
     <title>RaggyGirlVintage</title>
   </head>
   <body>
